# publicus-techincal

./: .dockerignore  .env.example  .envrc  .gitignore  AGENTS.md  Dockerfile  README.md  flake.nix  stuff
backend/: README.md  main.py  open_canada_grants_scraper.py  pyproject.toml
backend/publicus_backend/: __init__.py  app.py  main.py
backend/publicus_backend/core/: env.py  errors.py  query.py
backend/publicus_backend/routers/: business_benefits.py  grants.py  innovation.py  opportunities.py  pipeline.py  profile_copilot.py  search.py
backend/publicus_backend/schemas/: grants.py  opportunity_analysis.py  profile_copilot.py  search.py
backend/publicus_backend/services/: __init__.py  business_benefits.py  embeddings.py  grants.py  innovation.py  opportunity_analysis.py  pipeline.py  profile_copilot.py  semantic_search.py
backend/tests/: test_opportunity_analysis.py
docker/: start.sh
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/: DashboardSearch.svelte  OpportunityForceGraph.svelte  WorkspaceSidebar.svelte  WorkspaceTopbar.svelte  index.ts
frontend/src/lib/client/: business-benefits-updates.ts  company-matching.ts  funding-cache.ts  (+3 more)
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
supabase/migrations/: 20260427000000_create_profiles.sql  20260427001000_create_company_profiles.sql  20260427002000_harden_profile_constraints.sql  20260427003000_add_opportunity_embeddings.sql  20260427004000_create_ingestion_tables.sql
(+41 files in other folders)
