[project]
name = "publicus-backend"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.128",
  "httpx>=0.28",
  "pydantic>=2.12",
  "pydantic-settings>=2.12",
  "python-multipart>=0.0.22",
  "uvicorn>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
  "pytest-asyncio>=1.3",
]

[project.scripts]
open-canada-grants = "publicus_backend.services.grants:main"
publicus-api = "publicus_backend.main:run"
